samples/_failures_safe/1761006436_6ac23b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40233a39.c:139: error: expected ‘;’, ‘,’ or ‘)’ at end of input
